fix: 90s cursor refactor: add memoization to NewBase60 add: Singapore flag to LFW bits update packages

--- a/src/css/themes/_nineties.scss
+++ b/src/css/themes/_nineties.scss
@@ -6,7 +6,7 @@
 @mixin theme-nineties() {
 	--font-family-sans: var(--font-family-nineties);
 
-	cursor: url("/images/animated/dinosaur.gif") 2 7, auto;
+	cursor: url("/images/animated/dinosaur.gif") 3 8, auto;
 
 	&,
 	*,
